test/analyzer/inputs/valid/good-scope.yah
x is 2
() ->
	x be 1

() ->
	x is "doggy"