test/analyzer/inputs/invalid/out-of-scope.yah
x is (fun, func) ->
   y is 2
y be 5
